--- a/templates/merchant/add_producttype.html
+++ b/templates/merchant/add_producttype.html
@@ -5,6 +5,8 @@
 {% endblock title %}
 
 {% block body %}
+
+<div class="dashboard-product">
 <div class="title">
   <h1>Product Category</h1>
 </div>
@@ -30,6 +32,7 @@
       <input type="submit" value="Publish">
     </form>
   </div>
+</div>
 </div>
 {% comment %} {% include 'merchant/theme-temp/dashboard-footer.html' %} {% endcomment %}
 {% endblock body %}
