--- a/templates/merchant/producttype.html
+++ b/templates/merchant/producttype.html
@@ -7,6 +7,7 @@
     </div>
   {% endfor %}
 
+  <div class="dashboard-product">
 <div class="title">
   <h1>Product Category</h1>
   <a href="/merchant/products/add-producttype">Add Product Category</a>
@@ -45,6 +46,7 @@
           {% endfor %}
       </tbody>
   </table>
+</div>
 </div>
 {% endblock body %}
 
