--- a/static/css/main.css
+++ b/static/css/main.css
@@ -312,3 +312,116 @@ footer{
     background-color: var(--primary-color);
     color:#ffff
 }
+
+.out-of-area-msg{
+    padding: 20px;
+    border: 1px solid #ffc107;
+    background-color: #FFF3D6;
+    color: #C0392B;
+    border-radius: 8px;
+    font-weight: 600;
+}
+.area-button button{
+    padding: 6px 24px;
+    border-radius: 4px;
+    border: 1px solid #519259;
+    background-color: #519259;
+    color: #ffffff;
+    font-weight: 500;
+    transition: all 0.3s ease;
+}
+.area-button button:hover{
+    background-color: #1A544D;
+}
+.area-button button.cancelbtn{
+    background-color: transparent;
+    color: var(--alert_color);
+    border-color: var(--alert_color);
+}
+.area-button button.cancelbtn:hover{
+    background-color: var(--alert_color);
+    color: #ffffff;
+}
+.locationpoint:after{
+    content:'';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: inherit;
+    z-index: 1;
+}
+/* Chrome, Safari, Edge, Opera */
+.quantity input::-webkit-outer-spin-button,
+.quantity input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.quantity input[type=number] {
+  -moz-appearance: textfield;
+  width: 100%;
+  max-width: 100%;
+  text-align: center;
+  border: 0;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+}
+.quantity{
+    display: grid;
+    grid-template-columns: 40px 50px 40px;
+    margin-top: 5px;
+
+}
+.quantity button{
+    border: 1px solid;
+    background-color: transparent;
+    height: auto;
+    aspect-ratio: 1;
+    border-radius: 0;
+    font-size: 20px;
+    font-weight: 700;
+    display: inline-grid;
+    place-content: center;
+    line-height: 1;
+    transition: all 0.3s ease;
+}
+
+.quantity button.quantity-down{
+    border-radius: 4px 0 0 4px;
+    border-right-color: #cccccc;
+}
+.quantity button.quantity-up{
+    border-radius: 0 4px 4px 0;
+    border-left-color: #cccccc;
+}
+.quantity button:hover{
+    background-color: #000000;
+    color: #ffffff;
+    border-color: #000000;
+}
+
+.review-ratings{
+    display: flex;
+    justify-content: center;
+}
+.review-ratings input[type="radio"]{
+    display: none;
+}
+.review-ratings label{
+    --size: 20px;
+    width: var(--size);
+    height: var(--size);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 576 512' fill='orange'%3E%3Cpath d='M287.9 0c9.2 0 17.6 5.2 21.6 13.5l68.6 141.3 153.2 22.6c9 1.3 16.5 7.6 19.3 16.3s.5 18.1-5.9 24.5L433.6 328.4l26.2 155.6c1.5 9-2.2 18.1-9.7 23.5s-17.3 6-25.3 1.7l-137-73.2L151 509.1c-8.1 4.3-17.9 3.7-25.3-1.7s-11.2-14.5-9.7-23.5l26.2-155.6L31.1 218.2c-6.5-6.4-8.7-15.9-5.9-24.5s10.3-14.9 19.3-16.3l153.2-22.6L266.3 13.5C270.4 5.2 278.7 0 287.9 0zm0 79L235.4 187.2c-3.5 7.1-10.2 12.1-18.1 13.3L99 217.9 184.9 303c5.5 5.5 8.1 13.3 6.8 21L171.4 443.7l105.2-56.2c7.1-3.8 15.6-3.8 22.6 0l105.2 56.2L384.2 324.1c-1.3-7.7 1.2-15.5 6.8-21l85.9-85.1L358.6 200.5c-7.8-1.2-14.6-6.1-18.1-13.3L287.9 79z'/%3E%3C/svg%3E");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.review-ratings label:has(~ label input:checked),
+.review-ratings label:has(~ label:hover),
+.review-ratings label:hover,
+.review-ratings label:has(input:checked){
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 576 512' fill='orange'%3E%3Cpath d='M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z'/%3E%3C/svg%3E");
+}
