--- a/templates/customer/buynow.html
+++ b/templates/customer/buynow.html
@@ -68,7 +68,11 @@
                                     </td>
                                     <td>
                                         <label for="quantity-{{ combined_data.products.uid }}">
-                                            <input type="number" name='quantity' id='quantity-{{ combined_data.products.uid }}' min="10" value="10">
+                                            <div class="quantity">
+                                                <button type="button" class="quantity-down quantity-button">-</button>
+                                                <input type="number" name='quantity' id='quantity-{{ combined_data.products.uid }}'  min="1" value="1" step="1">
+                                                <button type="button" class="quantity-up quantity-button">+</button>
+                                            </div>
                                         </label>
                                     </td>
                                     <td>
