--- a/templates/customer/buynow.html
+++ b/templates/customer/buynow.html
@@ -1,6 +1,6 @@
 {% extends "customer/temp/base.html" %}
 {% block body %}
-<div class='container'>
+<div class='container section-gaps'>
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-8 col-sm-12">
             <form action="{% url 'customer:buy-now' %}" method="POST">
