--- a/templates/customer/order.html
+++ b/templates/customer/order.html
@@ -2,7 +2,7 @@
 {% block body %}
 <section class="order-listing-template section-gaps">
     <div class="container">
-        <div class='row justify-content-center'>
+        <div class='row justify-content-center mb-4'>
             <div class='col-8 text-center'>
                 <h2>My Order</h2>
             </div>
