--- a/templates/customer/index.html
+++ b/templates/customer/index.html
@@ -27,7 +27,7 @@
 <section class="product-listing section-gaps">
   <div class="container">
     <h1 class="page-title mb-4">Products</h1>
-    <div class='row'>
+    <div class='row g-4'>
       {% for combined_data in combined_data %}
         <div class='col-md-3'>
           {% include "customer/temp/product_list.html" with combined_data=combined_data%}
