--- a/templates/customer/search.html
+++ b/templates/customer/search.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="search-result-wrap">
-            <div class='row'>
+            <div class='row g-4'>
                 {% for product in results %}
                 <div class='col-md-3'>
                     {% include "customer/temp/product_list.html" with combined_data=product %}
