--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,15 @@
     padding: 90px 0;
 }
 
+a{
+    color: inherit;
+}
+a:not(:hover){
+    text-decoration: none;
+}
+a:hover{
+    color: inherit;
+}
 .navbar {
     padding: 1em 0;
     width: 100%;
@@ -378,6 +387,10 @@ footer{
     margin-top: 5px;
 
 }
+table .quantity{
+    place-content: center;
+
+}
 .quantity button{
     border: 1px solid;
     background-color: transparent;
@@ -461,4 +474,47 @@ footer{
     height: 100%;
     cursor: pointer;
     place-content: center;
+}
+
+.latest-orders table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    background: #fff;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.latest-orders thead {
+    background-color: #f6f7f8;
+    color: #101010;
+    text-align: left;
+}
+
+.latest-orders thead th {
+    padding: 15px;
+    font-size: 16px;
+}
+
+.latest-orders tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.latest-orders tbody td {
+    padding: 12px 15px;
+    font-size: 14px;
+    text-align: left;
+}
+
+.latest-orders tbody tr:hover {
+    background-color: #e9f7fe;
+}
+
+select#orderstatus {
+    padding: 10px 20px;
+    border: 1px solid #d9d9d9;
+    border-radius: 8px;
+    font-weight: 500;
+    margin-top: 10px;
 }
